--- a/QRcode.html
+++ b/QRcode.html
@@ -45,6 +45,12 @@
         <div class="col-4"></div>
       </div>
     </div>
+    <button
+                class="btn btn-outline-success"
+                type="button"
+              >
+                下載
+              </button> 
   </body>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
