--- a/QRcode.html
+++ b/QRcode.html
@@ -45,12 +45,19 @@
         <div class="col-4"></div>
       </div>
     </div>
+     <div class="container">
+      <div class="row">
+        <div class="col-10"></div>
+        <div class="col">
     <button
                 class="btn btn-outline-success"
                 type="button"
               >
                 下載
               </button> 
+          </div>
+       </div>
+    </div>
   </body>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
