--- a/QRcode.html
+++ b/QRcode.html
@@ -44,7 +44,7 @@
         </div>
         <div class="col-4"></div>
       </div>
-      <div class="row">
+      <div class="row" id="download">
         <div class="col-10"></div>
         <div class="col">
     <button
