--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="map.html">地圖總覽</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="rank.html">學生成績</a>
+                </li>
               </ul>
               <button class="btn btn-outline-success" id="logout" type="submit">
                 登出
